--- a/style.css
+++ b/style.css
@@ -36,39 +36,19 @@ li a:hover {
   background-color: hotpink;
 }
 
-/* Blocs arrangements */
-
-main {
-  display: flex;
-  flex-direction: column;
-}
-
 /* Image displaying */
 
-/* div.gallery {
+section {
   display: flex;
-  justify-content: space-around;
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
+  flex-shrink: auto;
+  margin: auto;
+  max-width: 75%;
 }
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 50%;
-  height: auto;
-} */
 
 div.gallery {
-  display: flex;
-  justify-content: space-around;
-  margin: 5px;
+  margin: 10px;
   border: 1px solid #ccc;
   float: left;
-  width: auto;
 }
 
 div.gallery:hover {
@@ -78,4 +58,16 @@ div.gallery:hover {
 div.gallery img {
   width: 100%;
   height: auto;
+}
+
+/* Titles */
+
+h2 {
+  max-width: 80%;
+  margin: auto;
+}
+
+h3 {
+  max-width: 75%;
+  margin: auto;
 }
