--- a/style.css
+++ b/style.css
@@ -71,3 +71,22 @@ h3 {
   max-width: 75%;
   margin: auto;
 }
+
+/* Phone users */
+
+@media (max-width: 1024px) {
+  section {
+    display: flex;
+    flex-shrink: auto;
+    margin: auto;
+    max-width: 100%;
+  }
+  h2 {
+    max-width: 100%;
+    margin: auto;
+  }
+  h3 {
+    max-width: 100%;
+    margin: auto;
+  }
+}
