--- a/style.css
+++ b/style.css
@@ -72,6 +72,25 @@ h3 {
   margin: auto;
 }
 
+h1 {
+  color: #CEF0D4;
+  font-family: 'Rouge Script', cursive;
+  font-size: 130px;
+  font-weight: normal;
+  line-height: 48px;
+  text-shadow: 1px 1px 2px #082b34;
+}
+
+h1 a {
+  text-decoration: none;
+  color: antiquewhite;
+  font-family: 'Rouge Script', cursive;
+  font-size: 130px;
+  font-weight: normal;
+  line-height: 48px;
+  text-shadow: 1px 1px 2px #082b34;
+}
+
 /* Phone users */
 
 @media (max-width: 1024px) {
@@ -89,4 +108,11 @@ h3 {
     max-width: 100%;
     margin: auto;
   }
+}
+
+/* Fonts */
+
+@font-face {
+  font-family: 'Rouge Script';
+  src: url('fonts/RougeScript-Regular.ttf');
 }
