--- a/style.css
+++ b/style.css
@@ -47,17 +47,38 @@ section {
 
 div.gallery {
   margin: 10px;
-  border: 1px solid #ccc;
   float: left;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
 }
 
 div.gallery img {
   width: 100%;
   height: auto;
+  border: 1px solid #ccc;
+}
+
+div.gallery img:hover {
+  border: 1px solid #777;
+}
+
+div.desc {
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.button:link, .button:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.button:hover, .button:active {
+  background-color: green;
+  color: white;
 }
 
 /* Titles */
