--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+.colorpalette {
+  color: rgb(45, 49, 66);
+  color: rgb(191, 192, 192);
+  color: rgb(245, 245, 245);
+  color: rgb(239, 131, 84);
+  color: rgb(79, 93, 117);
+}
+
 /* Background color of the whole page */
 
 body {
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
+  background-color: rgb(250, 250, 250);
 }
 
 /* Navigation bar */
@@ -13,7 +22,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(79, 93, 117);
 }
 
 li {
@@ -33,7 +42,7 @@ li a {
 }
 
 li a:hover {
-  background-color: hotpink;
+  background-color:  rgb(239, 131, 84);
 }
 
 /* Image displaying */
@@ -53,11 +62,13 @@ div.gallery {
 div.gallery img {
   width: 100%;
   height: auto;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: 1px solid rgb(191, 192, 192);
 }
 
 div.gallery img:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: 1px solid rgb(79, 93, 117);
 }
 
 div.desc {
@@ -69,7 +80,7 @@ div.desc {
 .button:link, .button:visited {
   background-color: white;
   color: black;
-  border: 2px solid green;
+  border: 2px solid rgb(239, 131, 84);
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -77,8 +88,12 @@ div.desc {
 }
 
 .button:hover, .button:active {
-  background-color: green;
+  background-color: rgb(239, 131, 84);
   color: white;
+}
+
+.desc p{
+  margin: auto;
 }
 
 /* Titles */
@@ -104,7 +119,7 @@ h1 {
 
 h1 a {
   text-decoration: none;
-  color: antiquewhite;
+  color: rgb(239, 131, 84);
   font-family: 'Rouge Script', cursive;
   font-size: 130px;
   font-weight: normal;
