--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   color: rgb(45, 49, 66);
   color: rgb(191, 192, 192);
   color: rgb(245, 245, 245);
-  color: rgb(239, 131, 84);
+  color: #ef8354;
   color: rgb(79, 93, 117);
 }
 
@@ -13,7 +13,39 @@ body {
   background-color: rgb(250, 250, 250);
 }
 
+/* header */
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* header img {
+  min-width: 20%;
+  max-width: 20%;
+} */
+header img a {
+  min-width: 10%;
+  max-width: 10%;
+}
+
+
+h1 a {
+  text-decoration: none;
+  color: rgb(239, 131, 84);
+  font-family: Arial, bold;
+  font-size: 2em;
+  font-weight: normal;
+  line-height: 48px;
+  text-shadow: 1px 1px 2px #082b34;
+  margin: auto;
+}
+
+
 /* Navigation bar */
+
+nav {
+  font-family: Arial, bold;
+}
 
 ul {
   border: hidden;
@@ -29,9 +61,6 @@ li {
   float: left;
 }
 
-#panier {
-  float: right;
-}
 
 li a {
   display: block;
@@ -42,7 +71,7 @@ li a {
 }
 
 li a:hover {
-  background-color:  rgb(239, 131, 84);
+  background-color: rgb(239, 131, 84);
 }
 
 /* Image displaying */
@@ -62,12 +91,10 @@ div.gallery {
 div.gallery img {
   width: 100%;
   height: auto;
-  /* border: 1px solid #ccc; */
   border: 1px solid rgb(191, 192, 192);
 }
 
 div.gallery img:hover {
-  /* border: 1px solid #777; */
   border: 1px solid rgb(79, 93, 117);
 }
 
@@ -92,11 +119,12 @@ div.desc {
   color: white;
 }
 
-.desc p{
+.desc p {
   margin: auto;
 }
 
 /* Titles */
+
 
 h2 {
   max-width: 80%;
@@ -108,24 +136,7 @@ h3 {
   margin: auto;
 }
 
-h1 {
-  color: #CEF0D4;
-  font-family: 'Rouge Script', cursive;
-  font-size: 130px;
-  font-weight: normal;
-  line-height: 48px;
-  text-shadow: 1px 1px 2px #082b34;
-}
 
-h1 a {
-  text-decoration: none;
-  color: rgb(239, 131, 84);
-  font-family: 'Rouge Script', cursive;
-  font-size: 130px;
-  font-weight: normal;
-  line-height: 48px;
-  text-shadow: 1px 1px 2px #082b34;
-}
 
 /* Phone users */
 
