--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,12 @@ header {
   justify-content: space-between;
 }
 
-header img a {
-  min-width: 10%;
-  max-width: 10%;
+header a {
+  width: 5%;
+}
+
+header a img {
+  width: 80%;
 }
 
 h1 a {
@@ -67,6 +70,53 @@ li a:hover {
   background-color: rgb(239, 131, 84);
 }
 
+#search {
+  display: block;
+  font-family: Arial;
+  float: right;
+  text-align: center;
+  padding: 10px 12px;
+}
+
+/* Button + little animation */
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: rgb(239, 131, 84);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 5px;
+  transition: all 0.25s;
+  cursor: pointer;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 /* Image displaying */
 
 section {
@@ -101,7 +151,6 @@ div.desc {
   font-family: Arial;
   background-color: white;
   color: rgb(45, 49, 66);
-  ;
   border: 2px solid rgb(239, 131, 84);
   padding: 8px 10px;
   text-align: center;
