--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1 a {
   margin: auto;
 }
 
-/* Navigation bar */
+/* Navigation bar and footer*/
 
 nav, footer {
   font-family: Arial, bold;
@@ -117,6 +117,22 @@ li a:hover {
   right: 0;
 }
 
+.button:link, .button:visited {
+  font-family: Arial;
+  background-color: white;
+  color: rgb(45, 49, 66);
+  border: 2px solid rgb(239, 131, 84);
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.button:hover, .button:active {
+  background-color: rgb(239, 131, 84);
+  color: white;
+}
+
 /* Image displaying */
 
 section {
@@ -145,22 +161,6 @@ div.desc {
   padding: 15px;
   display: flex;
   justify-content: space-between;
-}
-
-.button:link, .button:visited {
-  font-family: Arial;
-  background-color: white;
-  color: rgb(45, 49, 66);
-  border: 2px solid rgb(239, 131, 84);
-  padding: 8px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-.button:hover, .button:active {
-  background-color: rgb(239, 131, 84);
-  color: white;
 }
 
 .desc p {
@@ -193,7 +193,6 @@ h3 {
     margin: auto;
     max-width: 100%;
   }
-  
   h3 {
     max-width: 100%;
     margin: auto;
