--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,13 @@ h3 {
   text-shadow: 1px 1px 2px rgba(45, 49, 66, 0.5);
 }
 
+/* cart */
+
+#total .button {
+  font-size: 1.3em;
+  margin: auto;
+}
+
 /* Phone users */
 
 @media (max-width: 1024px) {
